Fail fast when running on JDK < 11 and document JDK 11-25 as supported runtime
The simulator and "Run as desktop app" goals fork the JVM with
--add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED and similar options,
which JDK 8 rejects with "Could not create the Java Virtual Machine". The
desktop run also surfaced as the opaque "An exception occured while executing
the Java class ...Stub" from exec-maven-plugin.

Add a runtime JDK check in JavaVersionUtil and call it from
PrepareSimulatorClasspathMojo and GenerateDesktopAppWrapperMojo so the user
gets a clear, actionable MojoFailureException naming the detected version,
JAVA_HOME, and a pointer to Adoptium before anything is forked.

Update README.md, BUILDING.md, CLAUDE.md, and the developer guide
(Index.asciidoc, Maven-Getting-Started.adoc, Working-With-CodenameOne-Sources)
to call out JDK 11 through 25 as the supported runtime range while keeping
JDK 8 as the build-time requirement for the core framework.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>